tests/ui/generics.gopp
package main
func main() {
    r := Ok(1) //~ ERROR cannot infer type argument E for Ok
    _ = r
    o := Ok[int, string](1, 2) //~ ERROR Ok takes 1 value(s), got 2
    _ = o
    q := Ok[int](1) //~ ERROR Ok takes 2 type argument(s), got 1
    _ = q
}
